<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_overlay2">

    <ImageButton
        android:id="@+id/imgBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="back"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imgBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp"
            android:paddingTop="4dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvTiTle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_title_vn"
                android:textColor="#E91E63"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="24dp"/>

            <TextView
                android:id="@+id/tvIntroduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduce_vn"
                android:textColor="#2196F3"
                android:textSize="20sp"
                android:lineSpacingExtra="5dp"
                android:layout_marginBottom="24dp"/>

            <TextView
                android:id="@+id/tvIntroduce1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduce1_vn"
                android:textColor="#FFC107"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="24dp"/>

            <TextView
                android:id="@+id/tvIntroduce2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduce2_vn"
                android:textColor="#2196F3"
                android:textSize="20sp"
                android:layout_marginBottom="24dp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img_intro"
                android:layout_marginBottom="24dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
