<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_overlay"
    tools:context=".Suggestion">

    <!-- ScrollView để cuộn nội dung -->

    <!-- Button để trở lại -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp">

            <!-- TextView tên bệnh -->
            <TextView
                android:id="@+id/tvTenBenh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:text="Tên Bệnh"
                android:textColor="#FFC107"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!-- TextView tiêu đề triệu chứng -->
            <TextView
                android:id="@+id/tvTitleTrieuChung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/suggestion_Symptoms_vn"
                android:textColor="#D14518"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!-- CardView chứa TextView triệu chứng -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/tvtrieuchung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="15dp"
                    android:text="Đây là gợi ý cách chữa trị cho loại bệnh này"
                    android:textColor="#2A98EF"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <!-- TextView tiêu đề cách chữa trị -->
            <TextView
                android:id="@+id/tvTitleCachChuaTri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="@string/suggestion_Treatment_vn"
                android:textColor="#1893CA"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!-- CardView chứa TextView điều trị -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <TextView
                    android:id="@+id/tvdieutri"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:padding="15dp"
                    android:text="Thông tin chi tiết về cách điều trị sẽ được hiển thị ở đây."
                    android:textColor="#AE891A"
                    android:textSize="20sp"
                    android:visibility="visible" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnback"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/customer_button"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/suggestion_Back_vn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
